--- a/app/src/main/res/drawable/bg_borders_edit.xml
+++ b/app/src/main/res/drawable/bg_borders_edit.xml
@@ -13,7 +13,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#F8F7F7"/>
             <corners android:radius="3dp"/>
-            <stroke android:color="@color/white" android:width="1dp"/>
+            <stroke android:color="#000000" android:width="1dp"/>
         </shape>
     </item>
 </selector>
