--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -55,7 +55,7 @@
             android:gravity="center_vertical"
             style="@style/Text"
             android:paddingLeft="15dp"
-            android:textSize="10dp"
+            android:textSize="12sp"
             android:background="#F6F4F4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
