--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -24,7 +24,7 @@
 
         <TextView
             android:id="@+id/textView26"
-            style="@style/Text_btn"
+            style="@style/Text"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_marginTop="30dp"
