--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvTimKiem"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#F9514F"
+        android:background="#F31516"
         android:gravity="center_horizontal"
         android:text="Tìm Kiếm"
         android:fontFamily="@font/be_vietnam_bold"
