--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -47,7 +47,7 @@
         android:id="@+id/constraintLayout4"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView18">
@@ -71,93 +71,6 @@
             tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constrain2"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="20dp"
-        android:background="@drawable/bg_edit_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="348dp">
-
-        <EditText
-            android:id="@+id/editTextSDT"
-            style="@style/Text"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/bg_edit_text2"
-            android:enabled="false"
-            android:hint="Nhập số điện thoại"
-            android:lines="1"
-            android:maxLines="1"
-            android:paddingLeft="25dp"
-            android:paddingRight="15dp"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/iconeditsdt"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/iconeditsdt"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginEnd="3dp"
-            android:src="@drawable/ic_pen"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/editTextSDT"
-            app:layout_constraintTop_toTopOf="parent" />" />
-    </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-    <!--<androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constrain3"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="20dp"
-        android:background="@drawable/bg_edit_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="450dp">
-
-        <EditText
-            android:id="@+id/editTextdate"
-            style="@style/Text"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/bg_edit_text2"
-            android:enabled="false"
-            android:hint="DD/MM/YY"
-            android:lines="1"
-            android:maxLines="1"
-            android:paddingLeft="25dp"
-            android:paddingRight="15dp"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/iconeditdate"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/iconeditdate"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginEnd="3dp"
-            android:src="@drawable/ic_pen"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/editTextdate"
-            app:layout_constraintTop_toTopOf="parent" />" />
-    </androidx.constraintlayout.widget.ConstraintLayout>-->
-
 
     <TextView
         android:id="@+id/textView30"
@@ -165,127 +78,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         android:text="@string/h_v_t"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
 
 
-    <EditText
-        android:id="@+id/editTextname"
-        style="@style/Text"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout8"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginHorizontal="25dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/bg_borders_edit"
-        android:drawableRight="@drawable/ic_pen"
-        android:enabled="false"
-        android:hint="Nhập tên"
-        android:lines="1"
-        android:maxLines="1"
-        android:paddingLeft="25dp"
-        android:paddingRight="15dp"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.525"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView30" />
-
-    <TextView
-        android:id="@+id/textView29"
-        style="@style/Text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/s_d_t"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextname" />
-
-    <EditText
-        android:id="@+id/editTextSDT"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="25dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/bg_borders_edit"
-        android:drawableRight="@drawable/ic_pen"
-        android:hint="Nhập số điện thoại"
-        android:paddingLeft="25dp"
-        android:maxLines="1"
-        android:textColor="@color/black"
-        android:enabled="false"
-        android:fontFamily="@font/be_vietnam_medium"
-        android:paddingRight="15dp"
-        android:textSize="16sp"
-        android:lines="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView29" />
-
-
-    <TextView
-        android:id="@+id/textView32"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/be_vietnam_medium"
-        android:text="@string/n_s"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextSDT" />
-
-    <EditText
-        android:id="@+id/editTextdate"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
         android:layout_marginHorizontal="25dp"
-        android:layout_marginTop="10dp"
         android:background="@drawable/bg_borders_edit"
-        android:drawableRight="@drawable/ic_pen"
-        android:hint="DD/MM/YY"
-        android:textColor="@color/black"
-        android:fontFamily="@font/be_vietnam_medium"
-        android:paddingLeft="25dp"
-        android:paddingRight="15dp"
-        android:enabled="false"
-        android:maxLines="1"
-        android:lines="1"
-        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView32" />
-
-
-
-
-
-    <!--<androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constrain1"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="20dp"
-        android:background="@drawable/bg_edit_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="244dp">
+        app:layout_constraintTop_toBottomOf="@+id/textView30">
 
         <EditText
             android:id="@+id/editTextname"
             style="@style/Text"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/bg_edit_text2"
+            android:layout_height="50dp"
+            android:background="@null"
             android:enabled="false"
             android:hint="Nhập tên"
             android:lines="1"
@@ -295,29 +112,134 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/iconeditname"
+            app:layout_constraintEnd_toStartOf="@+id/img_editTextname"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/iconeditname"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginEnd="3dp"
+            android:id="@+id/img_editTextname"
+            android:layout_width="30dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="10dp"
             android:src="@drawable/ic_pen"
-
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/editTextname"
-            app:layout_constraintTop_toTopOf="parent" />" />
-    </androidx.constraintlayout.widget.ConstraintLayout>-->
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView29"
+        style="@style/Text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/s_d_t"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout9"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_borders_edit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView29">
+
+        <EditText
+            android:id="@+id/editTextSDT"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:enabled="false"
+            android:fontFamily="@font/be_vietnam_medium"
+            android:hint="Nhập số điện thoại"
+            android:lines="1"
+            android:maxLines="1"
+            android:background="@null"
+            android:paddingLeft="25dp"
+            android:paddingRight="15dp"
+            android:textColor="@color/black"
+            android:inputType="phone"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/img_editTextSDT"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/img_editTextSDT"
+            android:layout_width="30dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_pen"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <TextView
+        android:layout_marginTop="20dp"
+        android:id="@+id/textView32"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:fontFamily="@font/be_vietnam_medium"
+        android:text="@string/n_s"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout9" />
 
 
 
+    <androidx.constraintlayout.widget.ConstraintLayout
 
+        android:layout_marginHorizontal="25dp"
+        android:background="@drawable/bg_borders_edit"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView32">
 
+        <EditText
+            android:id="@+id/editTextdate"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:enabled="false"
+            android:fontFamily="@font/be_vietnam_medium"
+            android:hint="DD/MM/YY"
+            android:lines="1"
+            android:maxLines="1"
+            android:background="@null"
+            android:paddingLeft="25dp"
+            android:paddingRight="15dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/img_editTextdate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-
+        <ImageView
+            android:id="@+id/img_editTextdate"
+            android:layout_width="30dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_pen"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline15"
