--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#F9514F"
+        android:background="#F31516"
         android:gravity="center_horizontal"
         android:text="Trang Chủ"
         android:textColor="#FFFFFF"
@@ -37,21 +37,18 @@
             android:background="#ffff">
 
 
-            <androidx.cardview.widget.CardView
+        <androidx.cardview.widget.CardView
                 android:id="@+id/cardView2"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="200dp"
-                android:layout_marginLeft="3dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="3dp"
-                app:cardCornerRadius="5dp"
+                android:layout_marginHorizontal="7dp"
+                android:layout_marginTop="7dp"
+                app:cardCornerRadius="3dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.842"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
-
                 <com.denzcoskun.imageslider.ImageSlider
-
                     android:id="@+id/imgSilde"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -67,25 +64,24 @@
                 android:id="@+id/tvViewAllCbo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginEnd="15dp"
                 android:fontFamily="@font/be_vietnam_medium"
                 android:text="View All"
                 android:textColor="#F44E4E"
                 android:textSize="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+                app:layout_constraintBottom_toBottomOf="@+id/textView9"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <TextView
                 android:id="@+id/textView9"
+                style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/be_vietnam_medium"
-                android:text="Combo  "
-                android:textColor="#000000"
-                android:textSize="24sp"
+                android:fontFamily="@font/be_vietnam_bold"
+                android:text="Sản phẩm mới phải thử  "
+                android:textSize="23sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
@@ -94,11 +90,11 @@
                 android:id="@+id/rcyProductCombo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="54dp"
+                android:layout_marginTop="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+                app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
             <com.github.ybq.android.spinkit.SpinKitView
                 android:id="@+id/prgLoadingPrCombo"
@@ -111,41 +107,58 @@
                 app:layout_constraintStart_toStartOf="parent"/>
 
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView3"
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:layout_marginHorizontal="7dp"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="3dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rcyProductCombo">
+                <com.denzcoskun.imageslider.ImageSlider
+                    android:id="@+id/imgSilde2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:iss_auto_cycle="true"
+                    app:iss_period="2500"/>
+            </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
                 android:fontFamily="@font/be_vietnam_medium"
-                android:text="New"
+                android:text="Sản phẩm ưu đãi"
                 android:textColor="#000000"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rcyProductCombo" />
+                app:layout_constraintTop_toBottomOf="@+id/cardView3" />
 
             <TextView
                 android:id="@+id/tvViewAllNew"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginEnd="15dp"
                 android:fontFamily="@font/be_vietnam_medium"
                 android:text="View All"
                 android:textColor="#F44E4E"
                 android:textSize="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rcyProductCombo" />
+                app:layout_constraintBottom_toBottomOf="@+id/textView8"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcyProductNew"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="54dp"
+                android:layout_marginTop="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rcyProductCombo" />
+                app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
             <com.github.ybq.android.spinkit.SpinKitView
                 android:id="@+id/prgLoadingPrNew"
@@ -158,43 +171,60 @@
                 app:layout_constraintStart_toStartOf="parent"/>
 
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView5"
+                android:layout_width="0dp"
+                android:layout_marginHorizontal="7dp"
+                android:layout_height="120dp"
+                android:layout_marginTop="15dp"
+                app:cardCornerRadius="3dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rcyProductNew">
+                <com.denzcoskun.imageslider.ImageSlider
+                    android:id="@+id/imgSilde3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:iss_auto_cycle="true"
+                    app:iss_period="2500"/>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/tvViewAllHot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
                 android:fontFamily="@font/be_vietnam_medium"
                 android:text="View All"
                 android:textColor="#F44E4E"
                 android:textSize="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rcyProductNew" />
+                app:layout_constraintBottom_toBottomOf="@+id/textView41"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginLeft="16dp"
-                android:fontFamily="@font/be_vietnam_medium"
-                android:text="Hot"
-                android:textColor="#000000"
+                android:fontFamily="@font/be_vietnam_bold"
+                android:text="SALE "
+                android:textColor="#F94B00"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rcyProductNew" />
+                app:layout_constraintTop_toBottomOf="@+id/cardView5" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcyProductHot"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="54dp"
-
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rcyProductNew" />
+                app:layout_constraintTop_toBottomOf="@+id/textView41" />
 
             <com.github.ybq.android.spinkit.SpinKitView
                 android:id="@+id/prgLoadingPrHot"
@@ -206,6 +236,16 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
+            <TextView
+                android:id="@+id/textView41"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Giảm 20% khi mua từ 4 sản phẩm  "
+                style="@style/Text"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="@+id/textView11"
+                app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
