--- a/app/src/main/res/layout/item_cart_products.xml
+++ b/app/src/main/res/layout/item_cart_products.xml
@@ -111,12 +111,12 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:fontFamily="@font/be_vietnam_medium"
             android:id="@+id/tvprice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginBottom="20dp"
+            android:fontFamily="@font/be_vietnam_medium"
             android:text="45.000 đ"
             android:textColor="@color/black"
             android:textSize="16dp"
