--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -28,11 +28,11 @@
 
     <ImageView
         android:id="@+id/icontym"
-        android:scaleType="centerCrop"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="25dp"
         android:layout_marginBottom="20dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_baseline_favorite_border_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -57,9 +57,9 @@
         android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/be_vietnam_medium"
         android:text="45.000 đ"
         android:textColor="#000000 "
@@ -74,7 +74,7 @@
         android:id="@+id/imageView2"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="25dp"
         android:src="@drawable/ic_clock"
         app:layout_constraintBottom_toBottomOf="@+id/tv_time"
         app:layout_constraintStart_toEndOf="@+id/cardView6"
