--- a/app/src/main/res/layout/item_hot_products.xml
+++ b/app/src/main/res/layout/item_hot_products.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bg_borders_sp"
     android:layout_width="match_parent"
     android:layout_marginTop="10dp"
@@ -28,23 +29,14 @@
     </androidx.cardview.widget.CardView>
 
 
-    <ImageView
-        android:id="@+id/imgProductFavouriteHot"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginRight="20dp"
-        android:src="@drawable/favorite_item_love"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <TextView
         android:id="@+id/tvProductNameHot"
-        android:fontFamily="@font/be_vietnam_medium"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="25dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/be_vietnam_medium"
         android:text="Cơm gà nướng mật ong"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -53,41 +45,49 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
-        android:text="4.5 (1.2k)"
-        android:textColor="#9F9F9F "
-        android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/tvProductNameHot" />
-
-    <TextView
         android:id="@+id/tvPriceProductHot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/be_vietnam_medium"
-        android:layout_marginTop="5dp"
         android:text="45.000 đ"
         android:textColor="#000000 "
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView21"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_timehot" />
 
     <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="13dp"
-        android:layout_height="13dp"
-        android:layout_marginStart="20dp"
-        android:src="@drawable/star_item"
-        app:layout_constraintBottom_toBottomOf="@+id/textView21"
+        android:id="@+id/imageView26"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_timehot"
         app:layout_constraintStart_toEndOf="@+id/cardView6"
-        app:layout_constraintTop_toTopOf="@+id/textView21" />
+        app:layout_constraintTop_toTopOf="@+id/tv_timehot"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_clock" />
 
+    <TextView
+        android:id="@+id/tv_timehot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:text="15 - 20 phút"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@+id/imageView26"
+        app:layout_constraintTop_toBottomOf="@+id/tvProductNameHot" />
+
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        android:src="@drawable/img_sale"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:riv_corner_radius_top_right="6dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
