--- a/app/src/main/res/layout/item_productbill.xml
+++ b/app/src/main/res/layout/item_productbill.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
@@ -20,19 +20,25 @@
         <TextView
             android:id="@+id/tvsl"
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            style="@style/Text"
+            android:gravity="center"
+            android:layout_height="match_parent"
             android:text="" />
 
         <TextView
             android:id="@+id/tvname"
             android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            style="@style/Text"
+            android:gravity="center"
+            android:layout_height="match_parent"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/tvprice"
             android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            style="@style/Text"
+            android:gravity="center"
+            android:layout_height="match_parent"
             android:text="TextView" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
