--- a/app/src/main/res/layout/item_select.xml
+++ b/app/src/main/res/layout/item_select.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="50dp"
+    android:layout_margin="3dp"
+    android:background="@drawable/bg_borders_sp"
     android:orientation="vertical">
     <TextView
         android:id="@+id/tv_addresss"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="Select Address"
         android:textSize="16dp"
+        style="@style/Text"
         android:padding="10dp"/>
     <View
         android:layout_width="match_parent"
