--- a/app/src/main/res/layout/item_select_address.xml
+++ b/app/src/main/res/layout/item_select_address.xml
@@ -5,8 +5,7 @@
     <TextView
         android:id="@+id/tv_selectaddress"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/grey_font"
-        android:padding="10dp"
-        android:textColor="@android:color/black"/>
+        android:layout_height="50dp"
+        style="@style/Text"
+        android:padding="10dp" />
 </RelativeLayout>
