--- a/app/src/main/res/layout/item_vertical_products.xml
+++ b/app/src/main/res/layout/item_vertical_products.xml
@@ -5,32 +5,36 @@
     android:layout_marginTop="10dp"
     android:layout_marginLeft="15dp"
     android:layout_width="175dp"
-    android:layout_height="230dp"
+    android:layout_height="240dp"
     android:id="@+id/layout_item_product_new_combo"
     android:background="@drawable/bg_borders_sp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView5"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_margin="10dp"
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/imgProduct"
+        android:layout_width="162dp"
+        android:layout_height="98dp"
+        android:layout_marginHorizontal="7dp"
+        android:layout_marginTop="7dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/imgProduct"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:src="@drawable/img_sp" />
-
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintTop_toTopOf="parent"
+        app:riv_corner_radius="3dp" />
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        app:riv_corner_radius_top_left="6dp"
+        android:src="@drawable/img_promo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvNamePoduct"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
         android:text="Cơm gà nướng mật ong"
@@ -39,7 +43,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView5" />
+        app:layout_constraintTop_toBottomOf="@+id/imgProduct" />
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="20dp"
