--- a/app/src/main/res/navigation/account.xml
+++ b/app/src/main/res/navigation/account.xml
@@ -85,6 +85,12 @@
         <action
             android:id="@+id/action_addressFragment_to_accountFragment"
             app:destination="@id/accountFragment" />
+        <action
+            android:id="@+id/action_addressFragment_to_addAddressFragment"
+            app:destination="@id/addAddressFragment" />
+        <action
+            android:id="@+id/action_addressFragment_to_editAddressFragment"
+            app:destination="@id/editAddressFragment" />
     </fragment>
     <fragment
         android:id="@+id/changePasFragment"
@@ -94,6 +100,24 @@
         <action
             android:id="@+id/action_changePasFragment_to_accountFragment"
             app:destination="@id/accountFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addAddressFragment"
+        android:name="com.example.deliciousrice.ui.account.Fragment.AddAddressFragment"
+        android:label="fragment_add_address"
+        tools:layout="@layout/fragment_add_address" >
+        <action
+            android:id="@+id/action_addAddressFragment_to_addressFragment"
+            app:destination="@id/addressFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/editAddressFragment"
+        android:name="com.example.deliciousrice.ui.account.Fragment.EditAddressFragment"
+        android:label="fragment_edit_address"
+        tools:layout="@layout/fragment_edit_address" >
+        <action
+            android:id="@+id/action_editAddressFragment_to_addressFragment"
+            app:destination="@id/addressFragment" />
     </fragment>
 
 </navigation>
