--- a/app/src/main/res/layout/activity_invoicedetails.xml
+++ b/app/src/main/res/layout/activity_invoicedetails.xml
@@ -69,6 +69,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/tvCountDownTime"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#E80202"
